⬆️ (backend-ci.yml): upgrade actions/checkout to version 4 for better stability and compatibility

--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -16,7 +16,7 @@ jobs:
     build-and-test:
         runs-on: ubuntu-latest
         steps:
-            - uses: actions/checkout@v
+            - uses: actions/checkout@v4
 
             - name: Setup .NET Core
               uses: actions/setup-dotnet@v4.0.0
