🔧 (backend-ci.yml): update working directory to ./backend for build-and-test job to run commands in the correct directory 🔧 (backend-ci.yml): remove unnecessary path from dotnet restore and dotnet build commands 🔧 (backend-ci.yml): update dotnet-version to "8.0.x" in Setup .NET Core step 🔧 (frontend-ci.yml): update working directory to ./frontend for build-and-test job to run commands in the correct directory

--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -15,16 +15,18 @@ on:
 jobs:
     build-and-test:
         runs-on: ubuntu-latest
+        defaults:
+            run:
+                working-directory: ./backend
         steps:
             - uses: actions/checkout@v4
-
             - name: Setup .NET Core
               uses: actions/setup-dotnet@v4.0.0
               with:
                   dotnet-version: "8.0.x"
 
             - name: Restore dependencies
-              run: dotnet restore backend/*.csproj
+              run: dotnet restore
 
             - name: Create .env file
               run: |
@@ -37,7 +39,7 @@ jobs:
                   echo ACCEPT_EULA=${{ secrets.ACCEPT_EULA }} >> .env
 
             - name: Build
-              run: dotnet build backend/*.csproj --no-restore -c Release
+              run: dotnet build --no-restore -c Release
 
             - name: Run tests
-              run: dotnet test backend/*.csproj --no-build --verbosity normal
+              run: dotnet test --no-build --verbosity normal
