🔧 (docker-compose.yml): update image tag to point to frontend instead of backend to reflect correct service 🔧 (makefile): add makefile with build, run, stop, and test commands for backend and frontend services

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
             - "${FRONTEND_PORT}:3000"
         depends_on:
             - backend
-        image: realyushi/todo-list:backend-latest
+        image: realyushi/todo-list:frontend-latest
 
     db:
         image: mcr.microsoft.com/mssql/server:2022-latest
