--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,9 +1,9 @@
 # Builder stage
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build-env
 WORKDIR /app
-COPY backend/*.csproj ./
+COPY ./src/*.csproj ./
 RUN dotnet restore
-COPY backend/ ./
+COPY ./src/ ./
 RUN dotnet publish -c Release -o out
 
 # Runner stage
@@ -11,4 +11,4 @@ FROM mcr.microsoft.com/dotnet/aspnet:8.0
 WORKDIR /app
 COPY --from=build-env /app/out .
 EXPOSE 5000
-ENTRYPOINT ["dotnet", "ToDoBackend.dll"]
+ENTRYPOINT ["dotnet", "ToDoListAPI.dll"]
