--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -17,7 +17,7 @@ jobs:
         runs-on: ubuntu-latest
         defaults:
             run:
-                working-directory: ./backend
+                working-directory: ./backend/src
         steps:
             - uses: actions/checkout@v4
             - name: Setup .NET Core
