🔧 (docker-ci.yml): update docker-compose commands to include both base and prod files for building and pushing Docker images 🔧 (frontend-ci.yml): update npm test command to run npm test-cucumber and npm test-jest for testing 🔧 (Dockerfile): restructure Dockerfile to include separate stages for base, build, test, and production 🔧 (ToDoListAPI.csproj): add new package references for testing with NUnit and SpecFlow 🔧 (specflow.json): add SpecFlow configuration file for feature tests 🔧 (todo_list_management.feature): add feature file with CRUD scenarios for To-Do List Management
📝 (todo_list_management.feature.cs): Add SpecFlow generated code for To-Do List Management feature tests with scenarios for adding, editing, deleting, and viewing tasks.

✨ (testRunner.cs): add new test scenario for verifying tasks in To-Do List app with Given-When-Then steps

✨ (todo_list_management.cs): Add feature test step definitions for managing to-do lists
🔧 (docker-compose.prod.yml): Add production configuration for backend, frontend, and db services
🔧 (docker-compose.test.yml): Add test configuration for backend and frontend services
🔧 (docker-compose.yml): Update ports for backend service and add image tags for backend and frontend services
♻️ (frontend/Dockerfile): Refactor Dockerfile to include separate stages for building, testing, and production
📝 (frontend/cucumber.json): Add configuration for running Cucumber tests
📝 (frontend/jest.config.js): Add Jest configuration for unit and feature tests
📝 (frontend/package.json): Update scripts and dependencies for testing with Jest and Cucumber
📝 (frontend/tests/feature-tests/features/todo_list_management.feature): Add feature file for to-do list management scenarios

✨ (todo_list_management.js): add step definitions for task creation, editing, and deletion in Cucumber feature tests
🔧 (tsconfig.app.json): update tsconfig to include tests directory for compilation
🔧 (makefile): update makefile to include test and deploy commands for project

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,14 +1,26 @@
-# Builder stage
-FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build-env
+# Base stage: Set up the common base for building the project
+FROM mcr.microsoft.com/dotnet/sdk:8.0 AS base
 WORKDIR /app
 COPY ./src/*.csproj ./
 RUN dotnet restore
-COPY ./src/ ./
+
+# Build stage: Compiles the application
+FROM base AS build
+COPY ./src ./
 RUN dotnet publish -c Release -o out
 
-# Runner stage
-FROM mcr.microsoft.com/dotnet/aspnet:8.0
+# Test stage: Runs tests 
+FROM build AS test
+# Assuming test projects are copied similarly and use `dotnet test`
+# Note: Adjust paths and project files as necessary
+COPY ./tests ./
+RUN dotnet test
+
+# Production stage: Prepares the runtime environment
+FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS production
 WORKDIR /app
-COPY --from=build-env /app/out .
+COPY --from=build /app/out .
 EXPOSE 5000
+RUN adduser --disabled-password --gecos "" myuser
+USER myuser
 ENTRYPOINT ["dotnet", "ToDoListAPI.dll"]
