--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -20,5 +20,5 @@ jobs:
                   password: ${{ secrets.DOCKERHUB_TOKEN }}
             - name: Build and push Docker images using Docker Compose
               run: |
-                  docker-compose -f docker-compose.yml build
-                  docker-compose -f docker-compose.yml push
+                  docker-compose -f docker-compose.yml -f docker-compose.prod.yml build
+                  docker-compose -f docker-compose.yml -f docker-compose.prod.yml push
