--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -27,5 +27,6 @@ jobs:
                   node-version: 20.9.0
             - run: npm ci
             - run: npm run lint
-            - run: npm test
+            - run: npm test-cucumber
+            - run: npm test-jest
             - run: npm run build
