--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -42,4 +42,4 @@ jobs:
               run: dotnet build --no-restore -c Release
 
             - name: Run tests
-              run: dotnet test --no-build --verbosity normal
+              run: dotnet test --no-build --configuration Release --verbosity normal
