✅ (frontend-ci.yml): fix npm test scripts to run correctly by updating the command names 🔧 (jest.config.js): update testMatch patterns to match JavaScript files under unit-tests folder ♻️ (jest.config.js): refactor moduleFileExtensions to include additional file extensions for Jest to recognize 📝 (package.json): update test-jest script to run Jest with experimental VM modules for compatibility

--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -27,6 +27,6 @@ jobs:
                   node-version: 20.9.0
             - run: npm ci
             - run: npm run lint
-            - run: npm test-cucumber
-            - run: npm test-jest
+            - run: npm run test-cucumber
+            - run: npm run test-jest
             - run: npm run build
