--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,7 @@
         "build": "tsc -b && vite build",
         "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
         "preview": "vite preview",
-        "test-jest": "jest",
+        "test-jest": " node --experimental-vm-modules node_modules/jest/bin/jest.js --passWithNoTests",
         "test-cucumber": "cucumber-js"
     },
     "dependencies": {
