🔧 (docker-compose.test_.yml): add docker-compose file for testing environment with backend and frontend services configurations 🔧 (makefile): update test target to use the new docker-compose.test_.yml file for running tests in the project

--- a/docker-compose.test_.yml
+++ b/docker-compose.test_.yml
@@ -1,6 +1,8 @@
 services:
     backend:
         build:
+            context: ./backend
+            dockerfile: Dockerfile
             target: test
         environment:
             DOTNET_ENVIRONMENT: Testing
