🔧 (.vscode/settings.json): add SQLTools connection configuration for MSSQL database 📝 (backend): add initial migration files for creating database tables and relationships ♻️ (backend): update ListModel to use TaskModel instead of Task 🔧 (backend): add database migration step to apply pending migrations on app startup
🔧 (docker-compose): update environment variable name from ConnectionStrings__Default to DB_CONNECTION_STRING for consistency and clarity
🔧 (docker-compose): add additional parameters to the DB_CONNECTION_STRING for enhanced security configuration
🔧 (makefile): add new 'run' target to simplify running the application using docker-compose

--- a/docker-compose.test_.yml
+++ b/docker-compose.test_.yml
@@ -6,7 +6,7 @@ services:
             target: test
         environment:
             DOTNET_ENVIRONMENT: Testing
-            ConnectionStrings__Default: "Server=db;Database=${DB_NAME};User Id=${DB_USER};Password=${SA_PASSWORD};"
+            DB_CONNECTION_STRING: "Server=db;Database=${DB_NAME};User Id=${DB_USER};Password=${SA_PASSWORD};"
     frontend:
         build:
             context: ./frontend
