--- a/backend/src/ToDoListAPI.csproj
+++ b/backend/src/ToDoListAPI.csproj
@@ -18,4 +18,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.6.2" />
     
   </ItemGroup>
+  <ItemGroup>
+  <Compile Remove="./Controllers/Generated/DefaultApi.cs" />
+</ItemGroup>
+
 </Project>
