--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -41,7 +41,7 @@ jobs:
             - name: Build
               #   run: dotnet build --no-restore -c Release
 
-              run: dotnet build --no-restore -c
+              run: dotnet build --no-restore
             - name: Run tests
               #   run: dotnet test --no-build --configuration Release --verbosity normal
               run: dotnet test --no-build --verbosity normal
