--- a/backend/tests/feature_tests/feature_tests.csproj
+++ b/backend/tests/feature_tests/feature_tests.csproj
@@ -5,14 +5,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.TestHost" Version="8.0.6" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.10.0" />
-    <PackageReference Include="moq" Version="4.20.70" />
 	<PackageReference Include="SpecFlow.Plus.LivingDocPlugin" Version="3.9.*" />
     <PackageReference Include="SpecFlow.NUnit" Version="3.9.74" />
     <PackageReference Include="nunit" Version="4.1.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.5.0" />
     <PackageReference Include="FluentAssertions" Version="6.12.0" />
-    <PackageReference Include="SpecFlow.Tools.MsBuild.Generation" Version="3.9.74" />
+    <PackageReference Include="Testcontainers.MsSql" Version="3.9.0" />
   </ItemGroup>
 
   <ItemGroup>
