🔧 (Dockerfile): change exposed port from 5000 to 5001 for backend service 🔧 (Dockerfile): add SSL certificate and set permissions for secure communication 🔧 (Dockerfile): change ownership of app directory to non-root user for security
♻️ (Configuration.cs): correct property name from Username to UserName in AutoMapper configuration

✨ (AuthController.cs): add detailed Swagger documentation for AuthController endpoints
✨ (AuthController.cs): implement user registration, login, and logout functionalities
♻️ (AuthController.cs): refactor AuthController to use dependency injection for services
🔧 (AuthController.cs): update route to use 'api/' prefix for better API structure

✨ (ListController.cs): add authorization and user-specific list management
♻️ (ListController.cs): refactor controller methods for clarity and efficiency

♻️ (TaskController): refactor TaskController to use DTOs and interfaces
✨ (TaskController): add user authentication and authorization
✨ (TaskController): implement user-specific task retrieval and manipulation
📝 (TaskController): update Swagger documentation for all endpoints

✨ (UserController): add authorization and improve user management endpoints

- Add `[Authorize]` attribute to secure endpoints
- Refactor route definitions for consistency
- Replace `User` model with `UserDto` for input validation
- Implement user ID retrieval from claims
- Add detailed Swagger responses for better API documentation

✨ (UserDto): initialize UserId and set default values

- Initialize `UserId` with a new GUID
- Set default values for `Role` and `Status` properties

🐛 (DbContext.cs): update user passwords to hashed values for security

✨ (Migrations): add migration for updated user password seeding

♻️ (ListRepository.cs): refactor DeleteList to return boolean for success

♻️ (TaskRepository.cs): refactor DeleteTask to return boolean for success

✨ (AuthService): add authentication service with JWT support
♻️ (UserRepository): update DeleteUser to return a boo

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -19,7 +19,17 @@ RUN dotnet test
 FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS production
 WORKDIR /app
 COPY --from=build /app/out .
-EXPOSE 5000
+EXPOSE 5001
+
+# Copy SSL certificate file
+COPY localhost.pfx /app/localhost.pfx
+
+# Set permissions for the certificate file
+RUN chmod 600 /app/localhost.pfx
+
 RUN adduser --disabled-password --gecos "" myuser
+# Change ownership of the app directory to myuser
+RUN chown -R myuser:myuser /app
+
 USER myuser
 ENTRYPOINT ["dotnet", "ToDoListAPI.dll"]
