--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,9 +5,12 @@ services:
             dockerfile: Dockerfile
         image: realyushi/todo-list:backend-latest
         ports:
-            - "${BACKEND_PORT}:5000"
+            - "${BACKEND_PORT}:5001"
         environment:
             DB_CONNECTION_STRING: "Server=db;Database=${DB_NAME};User Id=${DB_USER};Password=${SA_PASSWORD};Encrypt=true; TrustServerCertificate=true;"
+            ASPNETCORE_URLS: "https://*:5001"
+            ASPNETCORE_Kestrel__Certificates__Default__Path: "/app/localhost.pfx"
+            ASPNETCORE_Kestrel__Certificates__Default__Password: ""
         depends_on:
             - db
 
