--- a/backend/src/appsettings.json
+++ b/backend/src/appsettings.json
@@ -6,9 +6,12 @@
         }
     },
     "Jwt": {
-        "Key": "ThisIsAVeryLongAndSecureSecretKey123!@#",
+        "Key": "IYe0EzqdgyBwoShI5tONVsMcrrPFxNP0ypIAP7JH1gA=",
         "Issuer": "your-issuer",
         "Audience": "your-audience"
     },
-    "AllowedHosts": "*"
+    "AllowedHosts": "*",
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=localhost,1433;Database=ToDoList;User Id=sa;Password=rcv8hcd7zgm_HNK*pzq;TrustServerCertificate=True"
+    }
 }
