--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,8 @@
         "eslint-plugin-react-hooks": "^4.6.2",
         "eslint-plugin-react-refresh": "^0.4.7",
         "postcss": "^8.4.39",
+        "prettier": "^3.3.2",
+        "prettier-plugin-tailwindcss": "^0.6.5",
         "react-router-dom": "^6.24.1",
         "tailwindcss": "^3.4.4",
         "typescript": "^5.2.2",
