--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,8 @@
         "@fortawesome/free-solid-svg-icons": "^6.5.2",
         "@fortawesome/react-fontawesome": "^0.2.2",
         "react": "^18.3.1",
-        "react-dom": "^18.3.1"
+        "react-dom": "^18.3.1",
+        "theme-change": "^2.5.0"
     },
     "devDependencies": {
         "@types/react": "^18.3.3",
