--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,8 +15,10 @@
         "@fortawesome/free-regular-svg-icons": "^6.5.2",
         "@fortawesome/free-solid-svg-icons": "^6.5.2",
         "@fortawesome/react-fontawesome": "^0.2.2",
+        "@reduxjs/toolkit": "^2.2.6",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
+        "react-redux": "^9.1.2",
         "theme-change": "^2.5.0"
     },
     "devDependencies": {
@@ -36,6 +38,7 @@
         "react-router-dom": "^6.24.1",
         "tailwindcss": "^3.4.4",
         "typescript": "^5.2.2",
-        "vite": "^5.3.1"
+        "vite": "^5.3.1",
+        "vite-tsconfig-paths": "^4.3.2"
     }
 }
