🔧 (gitignore): add .aider* to .gitignore to exclude aider files
💄 (UserDto.cs): add newline at end of file for consistency

♻️ (ListInterface.ts): update interface to make createdAt and updatedAt optional

💄 (TaskItemInput.tsx): change label text from 'Task Description' to 'Task Name'

✨ (TaskListInput.tsx): create TaskListInput component for adding new task lists

🐛 (TaskLists.tsx): fix incorrect component import and usage

✨ (listSlice.ts): implement addList reducer to handle adding new lists

--- a/.gitignore
+++ b/.gitignore
@@ -536,3 +536,4 @@ zsdoc/data
 
 # End of https://www.toptal.com/developers/gitignore/api/macos,zsh,git,visualstudiocode,dotnetcore,aspnetcore,react,node
 
+.aider*
