--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "start": "vite",
-    "build": "tsc && vite build",
+    "tsc": "tsc",
+    "build": " vite build",
     "preview": "vite preview",
     "test": "vitest run",
     "format": "prettier --write .",
