--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -25,5 +25,6 @@
       "@models*": ["./models/*"]
     }
   },
-  "references": [{ "path": "./tsconfig.node.json" }]
+  "references": [{ "path": "./tsconfig.node.json" }],
+  "exclude": ["vite.config.ts"]
 }
