--- a/.github/workflows/development_todo-front.yml
+++ b/.github/workflows/development_todo-front.yml
@@ -7,6 +7,8 @@ on:
   push:
     branches:
       - development
+    paths:
+      - 'frontend/**'
   workflow_dispatch:
 
 jobs:
@@ -23,18 +25,21 @@ jobs:
 
       - name: npm install, build, and test
         run: |
+          cd frontend
           npm install
           npm run build --if-present
           npm run test --if-present
 
       - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+        run: |
+          cd frontend
+          zip -r release.zip ./*
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
           name: node-app
-          path: release.zip
+          path: frontend/release.zip
 
   deploy:
     runs-on: ubuntu-latest
