--- a/.github/workflows/development_todo-front.yml
+++ b/.github/workflows/development_todo-front.yml
@@ -24,12 +24,11 @@ jobs:
                   node-version: "20.x"
 
             - name: npm install, build, and test
+              working-directory: ./frontend
               run: |
-                  cd frontend
                   npm install
                   npm run build --if-present
                   npm run test --if-present
-
             - name: Zip artifact for deployment
               run: |
                   cd frontend
