--- a/.github/workflows/development_todo-front.yml
+++ b/.github/workflows/development_todo-front.yml
@@ -74,4 +74,4 @@ jobs:
               with:
                   app-name: "Todo-Front"
                   slot-name: "Production"
-                  package: .
+                  package: ./dist
