🔧 (gitignore): add .aider* and localhost* to .gitignore
♻️ (Program.cs): remove HTTPS configuration for localhost certificate

🔧 (Program.cs): update CORS policy to allow specific Azure static app origin

🔧 (appsettings.json): remove sensitive information from appsettings.json

--- a/backend/src/appsettings.json
+++ b/backend/src/appsettings.json
@@ -6,12 +6,12 @@
         }
     },
     "Jwt": {
-        "Key": "IYe0EzqdgyBwoShI5tONVsMcrrPFxNP0ypIAP7JH1gA=",
-        "Issuer": "your-issuer",
-        "Audience": "your-audience"
+        "Key": "",
+        "Issuer": "",
+        "Audience": ""
     },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        "DefaultConnection": "Server=localhost,1433;Database=ToDoList;User Id=sa;Password=rcv8hcd7zgm_HNK*pzq;TrustServerCertificate=True"
+        "DefaultConnection": ""
     }
 }
