--- a/.gitignore
+++ b/.gitignore
@@ -537,3 +537,6 @@ zsdoc/data
 # End of https://www.toptal.com/developers/gitignore/api/macos,zsh,git,visualstudiocode,dotnetcore,aspnetcore,react,node
 
 .aider*
+localhost*
+
+
