✨ (Program.cs): add environment variable support for JWT configuration 🔧 (appsettings.json): add placeholder values for JWT configuration keys

--- a/backend/src/appsettings.json
+++ b/backend/src/appsettings.json
@@ -6,9 +6,9 @@
         }
     },
     "Jwt": {
-        "Key": "",
-        "Issuer": "",
-        "Audience": ""
+        "Key": "PlaceholderKey",
+        "Issuer": "PlaceholderIssuer",
+        "Audience": "PlaceholderAudience"
     },
     "AllowedHosts": "*",
     "ConnectionStrings": {
