📝 (README.md): update instructions for Chrome flags to allow insecure localhost access
🔧 (Dockerfile): ensure HTTPS certificate directory exists during build

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -8,6 +8,7 @@ COPY ./src ./
 RUN dotnet publish -c Release -o out
 
 # Generate development certificate
+RUN mkdir -p /https   # Ensure the directory exists
 RUN dotnet dev-certs https -ep /https/aspnetapp.pfx -p password
 
 FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS final
