--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -36,7 +36,7 @@ jobs:
         runs-on: ubuntu-latest
         needs: build
         environment:
-            name: "production"
+            name: "Production"
             url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
         permissions:
             id-token: write
